--- a/CSS/final_styles_one_page_website.css
+++ b/CSS/final_styles_one_page_website.css
@@ -23,7 +23,7 @@ body {
     top: 0;
     left: 0;
     width: 100%;
-    height: 6%;
+    height: 7.5%;
     background-color: black;
     z-index: 1000000;
     color: rgb(255, 255, 255);
@@ -413,14 +413,14 @@ padding:1.25%;
 text-align:center;
 }
 
-#Form {
+.sign-Up {
     position: relative;
     top: -157%;
     left: 800px;
     padding: 0 3%;
 }
 
-#Form h1 {
+.sign-Up h1 {
     font-size:4em;
     padding:3%;
     width:47%;
@@ -431,7 +431,7 @@ text-align:center;
     margin-bottom:1%;
 }
 
- .newsletter > h3 {
+ .newsletter  h3 {
      position:relative;
      color:orchid;
      font-size: 1.9em;
@@ -440,7 +440,7 @@ text-align:center;
      margin:0  auto;
 }
 
- .blip {
+ .newsletter p {
         position:relative;
         color: rgb(109, 158, 250);
         font-size: 1.25em;
@@ -503,7 +503,7 @@ input[type="submit"] {
 
 #Contact {
     position: relative;
-    bottom:181%;
+    bottom:175%;
     padding: 3% 3% 3% 3%;
 }
 
